manifests/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tabview-service
  namespace: prod
spec:
  selector:
    app: tabview
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
