manifests/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tabview-ingress
  namespace: prod
  labels:
    app: tabview
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tabview-service
                port:
                  number: 80
