manifests/07-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tabview-ingress-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: tabview
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 8000
